About gap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -261,7 +261,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: start;
-    gap: 27px;
+    gap: 24px;
     height: 90%;
     width: 100%;
 }
